[project]
name = "puhutko"
version = "0.1.0"
description = ""
authors = [
    {name = "Artur Roos",email = "artur.roos@ktnlvr.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "snowflake-id (>=1.0.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"